fixed: cart position overflow

--- a/Css/style.css
+++ b/Css/style.css
@@ -29,7 +29,6 @@ body{
     background-color: var(--body-color);
     color: var(--text-color);
     transition: all .7s ease-in;
-    overflow-x: hidden;
 }
 
 body.dark {
@@ -218,7 +217,7 @@ h1,h2,h3,h3,h4,h5,h6{
     width: 100%;
     height: 100%;
     top: 0;
-    right: -100%;
+    left: -100%;
     z-index: 30;
     transition: all .7s ease;
 }
